# simple-microservices

./: README.md  docker-compose.yml  make.sh
catalog/: Dockerfile  index.js  package-lock.json  package.json
catalog/controllers/: catalogController.js
catalog/routes/: catalog.js
catalog/views/: catalog.ejs
checkout/: Dockerfile  checkout.go  go.mod  go.sum
checkout/queue/: queue.go
k8s/: apply.sh  catalog.yaml  checkout.yaml  delete.sh  order.yaml  payment.yaml  product.yaml  rabbitmq.yaml  redis.yaml
order/: .dockerignore  Dockerfile  pom.xml
order/src/main/java/dev/pgjbz/order/: OrderApplication.java
order/src/main/java/dev/pgjbz/order/configuration/: ObjectMapperConfig.java  RabbitMQConfig.java  RedisConfig.java
order/src/main/java/dev/pgjbz/order/domain/enums/: Status.java
order/src/main/java/dev/pgjbz/order/domain/model/: Order.java
order/src/main/java/dev/pgjbz/order/handles/: ReceiveMessageHandler.java
order/src/main/resources/: application.yaml
order/src/test/java/dev/pgjbz/order/: OrderApplicationTests.java
payment/: Cargo.toml  Dockerfile
payment/src/: lib.rs  main.rs
payment/src/models/: order.rs
payment/src/queues/: mod.rs  payment_queue.rs  queue.rs
payment/src/thread_pool/: mod.rs  worker.rs
products/: Cargo.toml  Dockerfile  products.json
products/src/: main.rs
