[package]
name = "products"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
rocket = { version = "0.5.0-rc.1", features = ["json", "msgpack", "uuid"] }